--- a/public/style.css
+++ b/public/style.css
@@ -3,4 +3,19 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.remote-video {
+  position: absolute; 
+  right: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto; 
+  height: auto; 
+  z-index: -100;
+  background-size: cover;
+  overflow: hidden;
+}
+
+
 /*# sourceMappingURL=style.css.map */
