--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'scaryFont';
+  src: url("Spooky-Yxay.ttf") format("truetype");
+}
+
 html,
 body {
   padding: 0;
@@ -5,17 +10,35 @@ body {
 }
 
 .remote-video {
-  position: absolute; 
-  right: 0; 
+  position: absolute;
+  right: 0;
   bottom: 0;
-  min-width: 100%; 
+  min-width: 100%;
   min-height: 100%;
-  width: auto; 
-  height: auto; 
+  width: auto;
+  height: auto;
   z-index: -100;
   background-size: cover;
   overflow: hidden;
 }
 
+#instructions {
+  position: fixed;
+  z-index: 9999;
+  left: 25vw;
+  top: 10vh;
+  font-size: 40px;
+  width: 50vw;
+  /* Full width */
+  height: auto;
+  /* Full height */
+  text-align: center;
+  background-color: white;
+  opacity: 0.9;
+  font-family: 'scaryFont';
+}
 
+.hide {
+  display: none;
+}
 /*# sourceMappingURL=style.css.map */
